--- a/BRCommTest.csproj
+++ b/BRCommTest.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BR.AN.PviServices">
-      <HintPath>C:\Users\Samet.CETIN\Desktop\BR.AN.PviServices.dll</HintPath>
+      <HintPath>.\BR.AN.PviServices.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
